# cmmfront

./: .gitattributes  .gitignore  CMakeLists.txt  notes.txt  todo.txt
glad/include/glad/: gl.h
misc/: test.cmm  test_1.cmm  test_2.cmm  test_3.cmm  test_4.cmm  test_5.cmm  test_6.cmm
pfd/: CMakeLists.txt
rapidjson/: CMakeLists.txt
src/: ImGuiFileDialog.cpp  ImGuiFileDialog.h  cmd_circle.cpp  cmd_circle.hpp  cmd_comment.cpp  cmd_comment.hpp  cmd_move_at.cpp  cmd_move_at.hpp  cmd_plane.cpp  cmd_plane.hpp  cmd_point.cpp  cmd_point.hpp  cmd_report.cpp  cmd_report.hpp  cmm_stub.cpp  cmm_stub.hpp  cmm_wrap.cpp  cmm_wrap.hpp  globals.cpp  globals.hpp  gui.cpp  gui.hpp  icmd.hpp  icmm.hpp  main.cpp  math_plane.cpp  math_plane.hpp  plane.cpp  plane.hpp  popup.hpp
